--- a/palettedugout.html
+++ b/palettedugout.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <header class="container">
-        <a href="index.html"><i class="fas fa-arrow-left"></i>
-        </a>
+      <a href="index.html"><i class="fas fa-arrow-left"></i> </a>
       <svg
         width="130"
         height="34"
@@ -56,13 +55,118 @@
         />
       </svg>
     </header>
-<section>
-  <img src="public/img/palettedugout.jpg" alt="">
-</section>
-   
+
+    <section class="menu">
+      <img src="public/img/palettedugout.jpg" alt="" />
+      <div class="menu-container container">
+        <div class="menu-resto">
+          <h1>La palette du goût</h1>
+          <i class="far fa-heart"></i>
+        </div>
+        <div class="menu-categorie">
+          <h2>Entrées</h2>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Fricassée d'escargot </h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Au piment d'espelette</p></div>
+            <div><p><b>25€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Foie gras de canard mi-cuit</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Et ses copeaux de truffe noire</p> </div>
+            <div><p><b>35€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Oeuf au plat</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Assaisoné à la truffe sur lit de...</p></div>
+            <div><p><b>20€</b></p></div>
+          </div>
+        </div>
+
+
+        <div class="menu-categorie">
+          <h2>Plats</h2>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Filet de boeuf aux herbes</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Accompagné de sa ribambelle de légumes</p></div>
+            <div><p><b>40€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Parmentier de queue de boeuf</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>A la truffe noire sur sa purée de panais</p></div>
+            <div><p><b>35€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Filet de turbot</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Aux agrumes</p></div>
+            <div><p><b>44€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-categorie">
+          <h2>Desserts</h2>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Paris-Brest</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Revisité</p></div>
+            <div><p><b>18€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Macaron au chocolat d'exception</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Et glace à la vanille de Madagascar</p></div>
+            <div><p><b>22€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-card">
+          <div class="menu-card_title">
+            <h3>Mousse au chocolat</h3>
+          </div>
+          <div class="menu-card_text">
+            <div><p>Au piment d'espelette et à la truffe noire</p></div>
+            <div><p><b>23€</b></p></div>
+          </div>
+        </div>
+        <div class="menu-btn">
+          <a href="#" class="btn">Commander</a>
+        </div>
+      </div>
+
+       
+      
+    </section>
 
     <footer class="container">
-      <svg class="logofooter"
+      <svg
+        class="logofooter"
         width="196"
         height="34"
         viewBox="0 0 196 34"
