--- a/delicesens.html
+++ b/delicesens.html
@@ -174,7 +174,7 @@
             <div class="menu-card_content">
               
             <div class="menu-card_title">
-              <h3>farandole de desserts</h3>
+              <h3>Farandole de desserts</h3>
             </div>
             <div class="menu-card_text">
               <div><p>Du chef</p></div>
