--- a/lanote.html
+++ b/lanote.html
@@ -116,24 +116,25 @@
               </div>
             </div>
             </div>
-          </div>
-          <div class="menu-card">
-            <div class="menu-card_content">
-
-            <div class="menu-card_title">
-              <h3>Foie grras de canard cuit entier</h3>
-            </div>
-            <div class="menu-card_text">
-              <div><p>Confiture de figue et pain toasté</p></div>
-              <div>
-                <p><b>35€</b></p>
+            <div class="menu-card">
+              <div class="menu-card_content">
+  
+              <div class="menu-card_title">
+                <h3>Foie gras de canard cuit entier</h3>
+              </div>
+              <div class="menu-card_text">
+                <div><p>Confiture de figue et pain toasté</p></div>
+                <div>
+                  <p><b>35€</b></p>
+                </div>
+              </div>
+              <div class="menu-card_validate">
+                <i class="fas fa-check-circle"></i>
               </div>
             </div>
-            <div class="menu-card_validate">
-              <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          </div>
+          
 
           <div class="menu-categorie plats">
             <h2>Plats</h2>
