--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -43,7 +43,7 @@
   </header>
 
   <section class="menu">
-    <img src="public/img/alafrancaise.jpg" alt="" />
+    <img src="./public/img/alafrancaise.jpg" alt="" />
     <div class="content">
       <div class="menu-container container">
 
