--- a/delicesens.html
+++ b/delicesens.html
@@ -44,7 +44,7 @@
 
 
   <section class="menu">
-    <img src="public/img/delicesens.jpg" alt="" />
+    <img src="./public/img/delicesens.jpg" alt="" />
     <div class="content">
       <div class="menu-container container">
         <div class="menu-resto">
