--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/public/css/style.css" />
+  <link rel="stylesheet" href="./public/css/style.css" />
   <script src="https://kit.fontawesome.com/8b1eebc2d9.js" crossorigin="anonymous"></script>
   <title>Oh my food</title>
 </head>
@@ -93,7 +93,7 @@
         <div class="restaurants-container">
           <div class="restaurants-card">
             <a href="palettedugout.html">
-              <img src="/public/img/palettedugout.jpg" loading="lazy" alt="Restaurant la palette du goût">
+              <img src="./public/img/palettedugout.jpg" loading="lazy" alt="Restaurant la palette du goût">
               <div class="restaurants-content">
                 <div class="restaurants-content_text">
                   <h2>La palette du goût</h2>
@@ -107,7 +107,7 @@
         </div>
         <div class="restaurants-card new">
           <a href="lanote.html">
-            <img src="/public/img/enchantee.jpg" loading="lazy" alt="Restaurant La note enchantée">
+            <img src="./public/img/enchantee.jpg" loading="lazy" alt="Restaurant La note enchantée">
             <div class="restaurants-content">
               <div class="restaurants-content_text">
                 <h2>La note enchantée</h2>
@@ -121,7 +121,7 @@
         </div>
         <div class="restaurants-card">
           <a href="alafrancaise.html">
-            <img src="/public/img/alafrancaise.jpg" loading="lazy" alt="Restaurant A la française">
+            <img src="./public/img/alafrancaise.jpg" loading="lazy" alt="Restaurant A la française">
             <div class="restaurants-content">
               <div class="restaurants-content_text">
                 <h2>A la française</h2>
@@ -135,7 +135,7 @@
         </div>
         <div class="restaurants-card">
           <a href="delicesens.html">
-            <img src="/public/img/delicesens.jpg" loading="lazy" alt="Restaurant Delice des sens">
+            <img src="./public/img/delicesens.jpg" loading="lazy" alt="Restaurant Delice des sens">
             <div class="restaurants-content">
               <div class="restaurants-content_text">
                 <h2>Le délice des sens</h2>
