--- a/lanote.html
+++ b/lanote.html
@@ -42,7 +42,7 @@
   </header>
 
   <section class="menu">
-    <img src="public/img/enchantee.jpg" alt="" />
+    <img src="./public/img/enchantee.jpg" alt="" />
     <div class="content">
       <div class="menu-container container">
         <div class="menu-resto">
