--- a/palettedugout.html
+++ b/palettedugout.html
@@ -42,7 +42,7 @@
   </header>
 
   <section class="menu">
-    <img src="public/img/palettedugout.jpg" alt="" />
+    <img src="./public/img/palettedugout.jpg" alt="" />
     <div class="content">
       <div class="menu-container container">
         <div class="menu-resto">
