--- a/delicesens.html
+++ b/delicesens.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/public/css/style.css" />
+  <link rel="stylesheet" href="./public/css/style.css" />
   <script src="https://kit.fontawesome.com/8b1eebc2d9.js" crossorigin="anonymous"></script>
   <title>Oh my food</title>
 </head>
